info progress + scrollbar + width fix

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -12,6 +12,8 @@
 
 body {
   font-size: 0.875rem;
+  max-width: 100%;
+  overflow-x: hidden;
   /*font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif; /* THIS IS ACTUALLY BAD ???????*/ 
 }
 
@@ -319,4 +321,23 @@ td.collapsable a:not(.collapsed)::after {
   max-height: 250px;
   overflow-y: auto;
   white-space:pre-wrap;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--primary-light);
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--primary);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--secondary);
 }
